--- a/app/views/proposals/_proposal_vote_informations.html.erb
+++ b/app/views/proposals/_proposal_vote_informations.html.erb
@@ -24,7 +24,7 @@
               <p class="text-center">Expirée</p>
             </div>    
             <p class="text-muted text-center">Cette proposition n'a pas reçu le nombre de votes suffisant pour être validée avant la date limite.</p>
-            <p class="text-muted text-center">Merci pour ta proposition <%= @proposal.user.first_name %>! </p>    
+            <p class="text-muted text-center">Merci pour votre proposition <%= @proposal.user.first_name %>! </p>    
           <%else%> 
             <div class="alert alert-info">
               <p class="text-center">Validée</p>
