--- a/app/views/proposals/_proposal_vote_informations.html.erb
+++ b/app/views/proposals/_proposal_vote_informations.html.erb
@@ -29,7 +29,7 @@
             <div class="alert alert-info">
               <p class="text-center">Validée</p>
             </div>
-            <p class="text-muted text-center">Cette proposition a reçu le nombre de votes minimum pour passer à l'action! <%= @proposal.user.first_name %> a été mise en relation avec les votants.</p>
+            <p class="text-muted text-center">Cette proposition a reçu le nombre de votes minimum pour passer à l'action! <%= @proposal.user.first_name %> a été mis(e) en relation avec les votants.</p>
             <p class="text-muted text-center"> Bravo <%= @proposal.user.first_name %>! </p> 
           <%end%>
         <%end%>
