--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -1,3 +1,4 @@
+
 <br><br>
 <div class="container">
   <div class="row">
@@ -55,7 +56,7 @@
     <ul class="timeline">
         <li>
           <div class="timeline-badge primary"><i class="material-icons group-icon img-and-after">people</i></div>
-          <div class="timeline-panel">
+          <div class="timeline-panel ">
             <div class="timeline-heading">
               <h4 class="timeline-title">Rassemblez-vous !</h4>
             </div>
@@ -104,7 +105,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4">
-      <div class="card card-testimonial box">
+      <div class="card card-testimonial box zoom">
         <div class="icon">
           <i class="material-icons">format_quote</i>
         </div>
@@ -123,7 +124,7 @@
       </div>
     </div> 
     <div class="col-md-4"> 
-      <div class="card card-testimonial box">
+      <div class="card card-testimonial box zoom">
         <div class="icon">
           <i class="material-icons">format_quote</i>
         </div>
@@ -142,7 +143,7 @@
       </div>
     </div>
     <div class="col-md-4"> 
-      <div class="card card-testimonial box">
+      <div class="card card-testimonial box zoom">
         <div class="icon">
           <i class="material-icons">format_quote</i>
         </div>
