--- a/app/views/proposals/_proposal_vote_informations.html.erb
+++ b/app/views/proposals/_proposal_vote_informations.html.erb
@@ -4,13 +4,13 @@
       <% unless is_current_user_owner_of?(proposal) %>
         <%if (proposal.differencebetween == false) && proposal.votes_count < 5 %>
           <h5 class="text-muted" style='margin-bottom: 0px;'>Votez pour cette proposition</h5>
-          <p class='text-muted' style='font-style: italic; margin-top: 0px'> Il reste : <%= proposal.lifetime %> jours pour voter</p>
+          <p class='text-muted' style='font-style: italic; margin-top: 0px'> Il reste : <%= proposal.calculate_lifetime %> jours pour voter</p>
           <%if user_signed_in?%>
-            <%if Proposal.find(proposal.id).city.id == current_user.city.id%>
+            <%if proposal.city == current_user.city %>
               <%if proposal.vote_of(current_user)%>
-                <%= link_to '<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> A voté'.html_safe, proposal_vote_path(proposal.id, proposal.vote_of(current_user).id), :class => "btn btn-success", method: :delete, remote: true %>
+                <%= link_to '<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> A voté'.html_safe, proposal_vote_path(proposal.id, proposal.vote_of(current_user).id), id: 'del-vote-btn', :class => "btn btn-success", method: :delete, remote: true %>
               <%else%>
-                <%= link_to '<i class="material-icons" style="font-size: 19px">how_to_vote</i> Je vote'.html_safe, proposal_votes_path(proposal.id), :class => "btn btn-primary", method: :post, remote: true %>
+                <%= link_to '<i class="material-icons" style="font-size: 19px">how_to_vote</i> Je vote'.html_safe, proposal_votes_path(proposal.id), :class => "btn btn-primary", id:'add-vote-btn', method: :post, remote: true %>
               <%end%>
             <%else%>
               <p>Vous ne pouvez pas voter pour les propositions en dehors de votre ville !</p>
@@ -34,12 +34,12 @@
           <%end%>
         <%end%>
       <% else %>  
-        <p class='text-muted' style='font-style: italic; margin-top: 0px'> Il reste : <%= proposal.lifetime %> jours avant l'expiration de la proposition</p>
+        <p class='text-muted' style='font-style: italic; margin-top: 0px'> Il reste : <%= proposal.calculate_lifetime %> jours avant l'expiration de la proposition</p>
       <% end %>
-      <%if proposal.votes_count >1 %>
-        <h5><%= proposal.votes_count %> VOTES</h5>
+      <%if proposal.votes_count > 1 %>
+        <h5 id='votes-count'><%= proposal.votes_count %> VOTES</h5>
       <%else%>
-        <h5><%= proposal.votes_count %> VOTE </h5>
+        <h5 id='votes-count'><%= proposal.votes_count %> VOTE </h5>
       <%end%>
     </div>
     <% unless proposal.votes_count == 0 %>
