--- a/app/views/votes/destroy.js.erb
+++ b/app/views/votes/destroy.js.erb
@@ -1,3 +1,4 @@
+proposalId = <%= @proposal.id %>;
 <% if params[:city_id]  %>
   proposalId = <%= @proposal.id %>;
   proposalRow = $('tr#'+proposalId);
@@ -5,8 +6,19 @@
   voteInfo.remove();
   proposalRow.append('<%= j render 'cities/vote_informations', x: @proposal %>');
 <% else %>
-  proposalInfo = $('#proposal-info');
-  voteInfo = proposalInfo.find($('#proposal-vote-info'));
-  voteInfo.remove();
-  proposalInfo.append('<%= j render 'proposals/proposal_vote_informations', proposal: @proposal %>');
+  delVoteBtn = $('a#del-vote-btn');
+  delVoteBtn.html('Je vote');
+  delVoteBtn.removeClass('btn-success');
+  delVoteBtn.addClass('btn-primary');
+  delVoteBtn.attr('id', 'add-vote-btn');
+  delVoteBtn.attr('data-method', 'post');
+  delVoteBtn.prepend('<i class="material-icons" style="font-size: 19px">how_to_vote</i> ');
+  delVoteBtn.attr('href', '/proposals/' + proposalId + '/votes/');
+  votesCountTag = $('h5#votes-count');
+  proposalVotesCount = <%= @proposal.votes_count %>;
+  if (proposalVotesCount > 1) {
+    votesCountTag.html(proposalVotesCount + ' VOTES');
+  } else {
+    votesCountTag.html(proposalVotesCount + ' VOTE');
+  }
 <% end %>
