--- a/app/views/cities/_completed_proposal.html.erb
+++ b/app/views/cities/_completed_proposal.html.erb
@@ -19,12 +19,12 @@
       <div class="alert alert-warning">
         <p class="text-center">Expirée</p>
       </div>   
-      <p class="text-muted text-center">Cette proposition a atteint la date d'expiration</p>    
+      <p class="text-muted text-center text-wrap">Cette proposition a atteint la date d'expiration</p>    
     <%elsif x.votes_count >= 3%> 
       <div class="alert alert-info">
         <p class="text-center">Validée</p>
       </div>
-      <p class="text-muted text-center">Cette proposition a atteint les 5 votes !</p> 
+      <p class="text-muted text-center text-wrap">Cette proposition a atteint les 5 votes !</p> 
     <%end%>
   <td>
 </tr>
