--- a/app/views/cities/_my_city.html.erb
+++ b/app/views/cities/_my_city.html.erb
@@ -31,7 +31,7 @@
           <div class="card box">
             <div class="card-content">
               <div class="table-responsive">
-                <table class="table">
+                <table class="table text-wrap">
                   <tbody>
                     <% proposals.each do |x| %>
                       <%if (x.differencebetween == false) && (x.votes_count < 5) %>
@@ -61,7 +61,7 @@
           <div class="card box">
             <div class="card-content">
               <div class="table-responsive">
-                <table class="table">
+                <table class="table text-wrap">
                   <tbody>
                     <% proposals.each do |x| %>
                       <% if (x.differencebetween == true) || (x.votes_count >= 5) %>
