--- a/app/views/cities/_ongoing_proposal.html.erb
+++ b/app/views/cities/_ongoing_proposal.html.erb
@@ -2,7 +2,7 @@
   <td></td>
   <td>
     <%if x.picture.attached?%>
-      <%= image_tag x.picture, alt: "Card image", width: 170, style: "height: auto" %>
+      <%= image_tag x.picture, alt: "image", width: 170, style: "height: auto" %>
     <%else%>
       <%= image_tag ("home.jpg"), width: 170, style: "height: auto" %>
     <%end%>
@@ -11,13 +11,15 @@
     <h4 class='text-wrap'><%= x.title %></h4>
     <% t = (Time.now- (x.created_at+(60*60*24*30)))%>
     <p class='text-muted' style='font-style: italic;'> Il reste : <%= ((t.to_i)/(60*60*24)).abs %> jours pour voter</p>
-    <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
-      <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
-    </a>
-    <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
-      <i class="material-icons" style="font-size: 15px">mode_comment</i> <%= x.comments.count %>
-    </a>
-    <span class="badge badge-primary"><%= x.category.name %></span>
+    <div>
+      <a class="btn btn-primary btn-round btn-sm text-wrap" href= "/proposals/<%= x.id %>" role="button">
+        <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
+      </a>
+      <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%= x.id %>" role="button">
+        <i class="material-icons" style="font-size: 15px">mode_comment</i> <%= x.comments.count %>
+      </a>
+      <span class="badge badge-primary"><%= x.category.name %></span></p>
+    </div>
   </td>
   <%= render 'cities/vote_informations', x: x %>
 </tr>
