--- a/app/views/additional_views/contact.html.erb
+++ b/app/views/additional_views/contact.html.erb
@@ -59,7 +59,7 @@
     </div>
     <br><br>
     <div class="row">
-      <h2 class="text-center">Nous connaitre</h2>
+      <h2 class="text-center">Nous connaître</h2>
     </div>
     <br>
     <div class="row">
