--- a/app/views/additional_views/faq.html.erb
+++ b/app/views/additional_views/faq.html.erb
@@ -23,7 +23,7 @@
                     <a href="#tab4" data-toggle="tab">Comment faire valider ma proposition dans ma ville ?</a>
                   </li>
                   <li>
-                    <a href="#tab5" data-toggle="tab">Ma proposition est-elle directetement acceptée dans ma ville ?</a>
+                    <a href="#tab5" data-toggle="tab">Ma proposition est-elle directement acceptée dans ma ville ?</a>
                   </li>
                   <li>
                     <a href="#tab6" data-toggle="tab">Puis-je faire financer mon projet ?</a>
@@ -68,7 +68,7 @@
               <div class="tab-pane" id="tab2">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title">Vous pouvez voter seulement une fois chaque proposition.</h4>
+                    <h4 class="card-title">Vous ne pouvez voter qu'une seule fois par proposition.</h4>
                   </div>
                   <div class="card-content">
                     <h5>
@@ -86,7 +86,7 @@
                   <div class="card-content">
                     <h5>
                       Ce mail contient des liens utiles qui vous permettront de mettre en place votre projet.
-                      Vous pouvez également vous rendre sur le site de votre vite et vous rendre dans la rubrique "Appel à projet".
+                      Vous pouvez également vous rendre sur le site de votre ville et vous rendre dans la rubrique "Appel à projet".
                       <br /><br /> 
                       La liste des citoyens ayant voté pour votre idée vous sera également envoyée. 
                       De ce fait, vous pourrez entrer en contact avec eux afin de déployer votre projet, ensemble.
@@ -104,7 +104,7 @@
                       Le dossier doit contenir tout les prérequis demandés par votre mairie. 
                       Un lien avec toutes les explications vous sera envoyé lorsque votre proposition sera validée sur Agora.
                       <br />
-                      <br />Nous ne pouvons garantir que votre proposition soit retenue dans votre ville, même avec 100 votes. 
+                      <br />Nous ne pouvons garantir que votre proposition soit retenue dans votre ville, même avec 5 votes. 
                     </h5>
                   </div>
                 </div>
@@ -145,7 +145,7 @@
                   </div>
                   <div class="card-content">
                     <h5>
-                      Seule exception : lorsque vous votez pour une proposition et que celle-ci est validée sur Agora, votre email sera envoyée à l'initiateur de la proposition afin de pouvoir entrer en contact.
+                      Seule exception : lorsque vous votez pour une proposition et que celle-ci est validée sur Agora, votre email sera envoyé à l'initiateur de la proposition afin de pouvoir entrer en contact.
                       Cela vous est précisé lors de votre inscription.
                       <br />
                     </h5>
