--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -56,10 +56,10 @@
                 <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
               </div>
               <div class="category form-category">
-                <small>⁽¹⁾<em> Champs sont obligatoires</em></small>
+                <small>⁽¹⁾<em> Champs obligatoires</em></small>
                 <br>
                 <small>⁽²⁾<em> En vous inscrivant, vous acceptez que votre email soit communiqué à l'initiateur d'un projet, 
-                dans le cas où ce projet serait validé par Agora</em></small>
+                dans le cas où ce concept serait validé par Agora</em></small>
               </div>
               <%= f.submit "Je m'inscris !", class: "btn btn-primary" %>
               <%= render "devise/shared/links" %>
