--- a/app/views/proposals/_proposal_details.html.erb
+++ b/app/views/proposals/_proposal_details.html.erb
@@ -68,7 +68,7 @@
                 <button id="tweet-btn" class="btn btn-simple btn-twitter" style="margin-top: 0px; margin-bottom: 0px">
                   <i class="fa fa-twitter"></i> Tweeter ma proposition
                 </button><br>
-                <small class="text-muted">Besoin d'éditer ta proposition ? Ecrivez au support Agora !</small><br>
+                <small class="text-muted">Besoin d'éditer votre proposition ? Ecrivez au support Agora !</small><br>
                 <a class="btn btn-primary btn-xs" href="mailto: zeagoraproject@gmail.com" role="button">Ecrire au support</a>
               <% end %>
             </div>
