--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -23,7 +23,7 @@
   <div class="row featurette">
     <div class="col-md-7 order-md-1">
       <h2 class="featurette-heading">Proposez <i class="material-icons idea-icon" style="font-size: 33px">wb_incandescent</i></h2>
-      <h5>Une idée vous inspire depuis longtemps ? Sur Agora, vous êtes libres de la montrer à vos concitoyens. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</h5>
+      <h5>Une idée vous inspire depuis longtemps ? Sur Agora, vous êtes libres de la montrer à vos concitoyens. Nous veillons à ce que les propositions les plus pertinentes soient présentées.</h5>
     </div>
     <div class="col-md-5 order-md-1 img-center">
       <%= image_tag("idea.svg", style: "width:65%;") %>
@@ -33,7 +33,7 @@
   <div class="row featurette">
     <div class="col-md-5 col-lg-7 col-lg-push-5  ">
       <h2 class="featurette-heading">Votez  <i class="material-icons vote-icon" style="font-size: 33px">how_to_vote</i>
-        <h5>Chaque jour des citoyens comme vous réfléchissent à comment améliorer le quotidien de votre ville. Consultez et débattez des propositions ensemble!</h5>
+        <h5>Chaque jour, des citoyens comme vous réfléchissent à comment améliorer le quotidien de votre ville. Consultez et débattez des propositions ensemble!</h5>
     </div>
     <div class="col-md-7 col-lg-5 col-lg-pull-7 img-center">
           <%= image_tag("voting.svg", style: "width:65%") %>
@@ -61,7 +61,7 @@
               <h4 class="timeline-title">Rassemblez-vous !</h4>
             </div>
             <div class="timeline-body">
-              <h5>Le grand moment est arrivé ! À partir de 5 votes positifs, votre proposition est validée et nous vous mettons en relation avec toux ceux qui ont soutenus votre projet.</h5>
+              <h5>Le grand moment est arrivé ! À partir de 5 votes positifs, votre proposition est validée et nous vous mettons en relation avec toux ceux qui ont soutenu votre projet.</h5>
             </div>
           </div>
         </li>
@@ -72,7 +72,7 @@
               <h4 class="timeline-title">Créez votre association</h4>
             </div>
             <div class="timeline-body">
-              <h5>Selon la taille de votre projet, vous aurez besoin de créer une association à but non-lucrative.</h5>            
+              <h5>Selon la taille de votre projet, vous aurez besoin de créer une association à but non-lucratif.</h5>            
             </div>
           </div>
         </li>
@@ -149,7 +149,7 @@
         </div>
         <div class="card-content">
           <h5 class="card-description">
-            Avec Agora j'ai trouvé des citoyens motivés prêt à m'aider à réaliser mon projet ! J'ai pû débattre et agir avec eux pour améliorer ma ville. Merci Agora pour votre aide !
+            Avec Agora, j'ai trouvé des citoyens motivés et prêts à m'aider à réaliser mon projet ! J'ai pû débattre et agir avec eux pour améliorer ma ville. Merci Agora pour votre aide !
           </h5>
         </div>         
           <div class="footer">
@@ -169,7 +169,7 @@
   <div class="row">
     <div class="col-md-7">
       <h3 class="display-4 text-white"><b>Faites porter votre voix et changez votre ville !</b></h3>
-      <h4 class="text-white"> Une idée inspirante ? Rendez-là possible avec Agora !</h4>
+      <h4 class="text-white"> Une idée inspirante ? Rendez la possible avec Agora !</h4>
       <% if user_signed_in? %>
       <p><%= link_to 'Proposer mon idée', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
       <%else%>
