--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -1,11 +1,25 @@
 proposalId = <%= @proposal.id %>;
-<% if params[:city_id]  %>
+<% if params[:city_id] %>
   <% unless @ongoing_proposals_count == 0%>
     <% if (@proposal.votes_count < 5) && (@proposal.differencebetween == false) %>
-      proposalRow = $('tr#'+proposalId);
-      voteInfo = proposalRow.find($('.vote-info'));
-      voteInfo.remove();
-      proposalRow.append('<%= j render 'cities/vote_informations', x: @proposal %>');
+      cityId = <%= @city.id %>
+      addVoteBtn = $('div#btns-' + proposalId + '> a');
+      console.log(addVoteBtn);
+      addVoteBtn.html('A voté !');
+      addVoteBtn.removeClass('btn-primary');
+      addVoteBtn.addClass('btn-success');
+      addVoteBtn.attr('id', 'del-vote-btn-1');
+      addVoteBtn.attr('data-method', 'delete');
+      addVoteBtn.prepend('<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> ');
+      currentUserProposalVoteId = <%= @proposal.vote_of(current_user).id %>;
+      addVoteBtn.attr('href', '/cities/' + cityId + '/proposals/' + proposalId + '/votes/' + currentUserProposalVoteId);
+      votesCountTag = $('div#lbls-votes-conut-' + proposalId + '> h6');
+      proposalVotesCount = <%= @proposal.votes_count %>;
+      if (proposalVotesCount > 1) {
+        votesCountTag.html(proposalVotesCount + ' VOTES');
+      } else {
+        votesCountTag.html(proposalVotesCount + ' VOTE');
+      }
     <% else %>
       window.location = '<%= city_path @city %>'
     <% end %>
@@ -14,7 +28,7 @@ proposalId = <%= @proposal.id %>;
   <% end %>
 <% else %>
   addVoteBtn = $('a#add-vote-btn');
-  addVoteBtn.html('A voté');
+  addVoteBtn.html('A voté !');
   addVoteBtn.removeClass('btn-primary');
   addVoteBtn.addClass('btn-success');
   addVoteBtn.attr('id', 'del-vote-btn');
@@ -22,7 +36,7 @@ proposalId = <%= @proposal.id %>;
   addVoteBtn.prepend('<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> ');
   currentUserProposalVoteId = <%= @proposal.vote_of(current_user).id %>;
   addVoteBtn.attr('href', '/proposals/' + proposalId + '/votes/' + currentUserProposalVoteId);
-  votesCountTag = $('h5#votes-count');
+  votesCountTag = $('h6#votes-count');
   proposalVotesCount = <%= @proposal.votes_count %>;
   if (proposalVotesCount > 1) {
     votesCountTag.html(proposalVotesCount + ' VOTES');
