--- a/app/views/cities/_my_city.html.erb
+++ b/app/views/cities/_my_city.html.erb
@@ -2,13 +2,13 @@
 <% @numthen = 0 %>
 <% @numvotes = 0 %>
 <% proposals.each do |x| %>
-  <%if (x.votes_count >= 5)%>
-    <% @numvotes += 1 %>
-  <%elsif (x.differencebetween == false) %>
-    <% @numnow += 1 %>
-  <%else%>
-    <% @numthen += 1 %>
-  <%end%>
+<%if (x.votes_count >= 5)%>
+<% @numvotes += 1 %>
+<%elsif (x.differencebetween == false) %>
+<% @numnow += 1 %>
+<%else%>
+<% @numthen += 1 %>
+<%end%>
 <%end%>
 
 <br><br>
@@ -27,11 +27,19 @@
     <%else%>
       <h3><b>Les propositions en cours : votez pour vos propositions préférées !</b></h3>
       <div class="row">
-        <div class="col">
+        <div class="col-md-12">
           <div class="card box">
             <div class="card-content">
               <div class="table-responsive">
-                <table class="table text-wrap">
+                <table id="datatables-1" class="table text-wrap" cellspacing="0" width="100%" style="width:100%">
+                  <thead>
+                    <tr>
+                      <th class="disabled-sorting"></th>
+                      <th class="disabled-sorting"></th>
+                      <th></th>
+                      <th class="disabled-sorting"></th>
+                    </tr>
+                  </thead>
                   <tbody>
                     <% proposals.each do |x| %>
                       <%if (x.differencebetween == false) && (x.votes_count < 5) %>
@@ -47,7 +55,7 @@
       </div>
     <%end%>
   </div>
-
+  
   <div id='completed-proposals' class="container">
     <% if (@numthen == 0) && (@numvotes == 0) %>
       <div class='no-proposal'>
@@ -57,11 +65,19 @@
     <%else%>
       <h3><b>Les propositions terminées :</b></h3>
       <div class="row">
-        <div class="col">
+        <div class="col-md-12">
           <div class="card box">
             <div class="card-content">
               <div class="table-responsive">
-                <table class="table text-wrap">
+                <table id="datatables-2" class="table text-wrap" cellspacing="0" width="100%" style="width:100%">
+                  <thead>
+                    <tr>
+                      <th class="disabled-sorting"></th>
+                      <th class="disabled-sorting"></th>
+                      <th></th>
+                      <th class="disabled-sorting"></th>
+                    </tr>
+                  </thead>
                   <tbody>
                     <% proposals.each do |x| %>
                       <% if (x.differencebetween == true) || (x.votes_count >= 5) %>
