--- a/app/views/cities/_ongoing_proposal.html.erb
+++ b/app/views/cities/_ongoing_proposal.html.erb
@@ -1,24 +1,24 @@
-<tr id='<%= x.id %>'>
-  <td></td>
-  <td>
+<tr>
+  <td class='text-center'>
     <%if x.picture.attached?%>
-      <%= image_tag x.picture, alt: "image", width: 170, style: "height: auto" %>
+      <%= image_tag x.picture, alt: "image", style: "max-width: 200px; max-height: auto; display: block;" %>
     <%else%>
-      <%= image_tag ("home.jpg"), width: 170, style: "height: auto" %>
+      <%= image_tag ("home.jpg"), style: "max-width: 200px; max-height: auto; display: block;" %>
     <%end%>
   </td>
+  <td></td>
   <td>
     <h4 class='text-wrap'><%= x.title %></h4>
     <% t = (Time.now- (x.created_at+(60*60*24*30)))%>
-    <p class='text-muted' style='font-style: italic;'> Il reste : <%= ((t.to_i)/(60*60*24)).abs %> jours pour voter</p>
+    <p class='text-muted text-wrap' style='font-style: italic;'> Il reste : <%= ((t.to_i)/(60*60*24)).abs %> jours pour voter</p>
     <div>
-      <a class="btn btn-primary btn-round btn-sm text-wrap" href= "/proposals/<%= x.id %>" role="button">
+      <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%= x.id %>" role="button">
         <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
       </a>
       <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%= x.id %>" role="button">
         <i class="material-icons" style="font-size: 15px">mode_comment</i> <%= x.comments.count %>
       </a>
-      <span class="badge badge-primary"><%= x.category.name %></span></p>
+      <span class="badge badge-primary"><%= x.category.name %></span>
     </div>
   </td>
   <%= render 'cities/vote_informations', x: x %>
