--- a/app/views/proposals/_proposal_details.html.erb
+++ b/app/views/proposals/_proposal_details.html.erb
@@ -18,7 +18,7 @@
           <%end%>
           <div class="card-header">
             <h4 class="card-title"><%= @proposal.title %><br>
-              <div class='flex-row-center'>
+              <div>
                 <%= link_to "#{@proposal.city.name}", city_path(@proposal.city.id), class: 'btn btn-primary btn-round btn-xs' %>
                 <span class="badge badge-primary"><%= @proposal.category.name %></span>
               </div>
