--- a/app/views/votes/destroy.js.erb
+++ b/app/views/votes/destroy.js.erb
@@ -1,10 +1,21 @@
 proposalId = <%= @proposal.id %>;
 <% if params[:city_id]  %>
-  proposalId = <%= @proposal.id %>;
-  proposalRow = $('tr#'+proposalId);
-  voteInfo = proposalRow.find($('.vote-info'));
-  voteInfo.remove();
-  proposalRow.append('<%= j render 'cities/vote_informations', x: @proposal %>');
+  cityId = <%= @city.id %>
+  delVoteBtn = $('div#btns-' + proposalId + '> a')
+  delVoteBtn.html('Je vote');
+  delVoteBtn.removeClass('btn-success');
+  delVoteBtn.addClass('btn-primary');
+  delVoteBtn.attr('id', 'add-vote-btn-1');
+  delVoteBtn.attr('data-method', 'post');
+  delVoteBtn.prepend('<i class="material-icons" style="font-size: 19px">how_to_vote</i> ');
+  delVoteBtn.attr('href', '/cities/' + cityId + '/proposals/' + proposalId + '/votes/');
+  votesCountTag = $('div#lbls-votes-conut-' + proposalId + '> h6');
+  proposalVotesCount = <%= @proposal.votes_count %>;
+  if (proposalVotesCount > 1) {
+    votesCountTag.html(proposalVotesCount + ' VOTES');
+  } else {
+    votesCountTag.html(proposalVotesCount + ' VOTE');
+  }
 <% else %>
   delVoteBtn = $('a#del-vote-btn');
   delVoteBtn.html('Je vote');
@@ -14,7 +25,7 @@ proposalId = <%= @proposal.id %>;
   delVoteBtn.attr('data-method', 'post');
   delVoteBtn.prepend('<i class="material-icons" style="font-size: 19px">how_to_vote</i> ');
   delVoteBtn.attr('href', '/proposals/' + proposalId + '/votes/');
-  votesCountTag = $('h5#votes-count');
+  votesCountTag = $('h6#votes-count');
   proposalVotesCount = <%= @proposal.votes_count %>;
   if (proposalVotesCount > 1) {
     votesCountTag.html(proposalVotesCount + ' VOTES');
