--- a/app/views/proposals/_proposal_vote_informations.html.erb
+++ b/app/views/proposals/_proposal_vote_informations.html.erb
@@ -8,9 +8,9 @@
           <%if user_signed_in?%>
             <%if Proposal.find(proposal.id).city.id == current_user.city.id%>
               <%if proposal.vote_of(current_user)%>
-                <%= link_to '<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> A voté'.html_safe, proposal_vote_path(proposal.id, proposal.vote_of(current_user).id), :class => "btn btn-success", method: :delete, remote: true %>
+                <%= link_to '<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> A voté'.html_safe, proposal_vote_path(proposal.id, proposal.vote_of(current_user).id), :class => "btn btn-success", id: 'del-vote-btn', method: :delete, remote: true %>
               <%else%>
-                <%= link_to '<i class="material-icons" style="font-size: 19px">how_to_vote</i> Je vote'.html_safe, proposal_votes_path(proposal.id), :class => "btn btn-primary", method: :post, remote: true %>
+                <%= link_to '<i class="material-icons" style="font-size: 19px">how_to_vote</i> Je vote'.html_safe, proposal_votes_path(proposal.id), :class => "btn btn-primary", id: 'add-vote-btn', method: :post, remote: true %>
               <%end%>
             <%else%>
               <p>Vous ne pouvez pas voter pour les propositions en dehors de votre ville !</p>
@@ -37,13 +37,13 @@
         <p class='text-muted' style='font-style: italic; margin-top: 0px'> Il reste : <%= proposal.lifetime %> jours avant l'expiration de la proposition</p>
       <% end %>
       <%if proposal.votes_count >1 %>
-        <h5><%= proposal.votes_count %> VOTES</h5>
+        <h6 id='votes-count'><%= proposal.votes_count %> VOTES</h6>
       <%else%>
-        <h5><%= proposal.votes_count %> VOTE </h5>
+        <h6 id='votes-count'><%= proposal.votes_count %> VOTE </h6>
       <%end%>
     </div>
     <% unless proposal.votes_count == 0 %>
-      <div class="card-footer" style="padding-top: 0px;  margin-bottom: 0px;">
+      <div class="card-footer" style="padding-top: 4px;  margin-bottom: 0px;">
         <div class="price">
           <small class="flex-row"><i class="material-icons">upgrade</i> <span>Classement général : <%= proposal.general_classification %></span></small>
           <small class="flex-row"><i class="material-icons">upgrade</i> <span>Classement catégorie <%= proposal.category.name %> : <%= proposal.category_classification %></span></small>
