--- a/app/views/cities/_ongoing_proposal.html.erb
+++ b/app/views/cities/_ongoing_proposal.html.erb
@@ -1,12 +1,11 @@
 <tr>
   <td class='text-center'>
     <%if x.picture.attached?%>
-      <%= image_tag x.picture, alt: "image", style: "max-width: 200px; max-height: auto; display: block;" %>
+      <%= image_tag x.picture, alt: "image", style: "max-width: 200px; max-height: auto; display: block; margin-right: 90px;" %>
     <%else%>
-      <%= image_tag ("home.jpg"), style: "max-width: 200px; max-height: auto; display: block;" %>
+      <%= image_tag ("home.jpg"), style: "max-width: 200px; max-height: auto; display: block; margin-right: 90px;" %>
     <%end%>
   </td>
-  <td></td>
   <td>
     <h4 class='text-wrap'><%= x.title %></h4>
     <% t = (Time.now- (x.created_at+(60*60*24*30)))%>
