--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -37,7 +37,7 @@ background-color: #FFFFFF !important;
 }
 
 .text-wrap {
-  word-break: break-all;
+  overflow-wrap: break-word;
 }
 
 .idea-icon {
