--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,8 +16,17 @@
         <h6 class="category text-gray">Mes informations</h6>
         <br>
         <h4 class="card-title"><%= @user.first_name %> <%= @user.last_name %></h4>
-        <br>
         <p class="text"><%= @user.email %></p>
+        <div>
+          <p class='text-success' style='margin-bottom: 0px;'>Jetons de votes</p>
+          <% if current_user_vote_tokens == 0 %>
+            <em class='text-muted text-wrap'>Désolé ! Vous n'avez aucun jeton de vote pour le moment, attendez le prochain renouvellement le <%= current_user_next_renewal_of_vote_tokens_date.strftime('%d/%m/%Y à %H:%M') %> ou dévotez pour des propositions qui vous semblent moins pertinentes !</em>
+          <% else %>
+            <% current_user_vote_tokens.times do %>
+              <i class='material-icons text-success' style='font-size: 19px;'>sentiment_satisfied_alt</i>
+            <% end %> <br>
+          <% end %>
+        </div>
         <%= link_to "#{@user.city.name}", city_path(@user.city), class: 'btn btn-primary btn-round btn-xs' %>
         <br>
         <div class="p-1 mb-1">
