--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -1,45 +1,59 @@
-proposalId = <%= @proposal.id %>;
-<% if params[:city_id] %>
-  <% unless @ongoing_proposals_count == 0%>
-    <% if (@proposal.votes_count < 5) && (@proposal.differencebetween == false) %>
-      cityId = <%= @city.id %>
-      addVoteBtn = $('div#btns-' + proposalId + '> a');
-      addVoteBtn.html('A voté !');
-      addVoteBtn.removeClass('btn-primary');
-      addVoteBtn.addClass('btn-success');
-      addVoteBtn.attr('id', 'del-vote-btn-1');
-      addVoteBtn.attr('data-method', 'delete');
-      addVoteBtn.prepend('<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> ');
-      currentUserProposalVoteId = <%= @proposal.vote_of(current_user).id %>;
-      addVoteBtn.attr('href', '/cities/' + cityId + '/proposals/' + proposalId + '/votes/' + currentUserProposalVoteId);
-      votesCountTag = $('div#lbls-votes-conut-' + proposalId + '> h6');
-      proposalVotesCount = <%= @proposal.votes_count %>;
-      if (proposalVotesCount > 1) {
-        votesCountTag.html(proposalVotesCount + ' VOTES');
-      } else {
-        votesCountTag.html(proposalVotesCount + ' VOTE');
-      }
+<% unless @current_user_vote_tokens_before_vote <= 0 %>
+  proposalId = <%= @proposal.id %>;
+  <% if params[:city_id] %>
+    <% unless @ongoing_proposals_count == 0%>
+      <% if (@proposal.votes_count < 5) && (@proposal.differencebetween == false) %>
+        cityId = <%= @city.id %>
+        addVoteBtn = $('div#btns-' + proposalId + '> a');
+        addVoteBtn.html('A voté !');
+        addVoteBtn.removeClass('btn-primary');
+        addVoteBtn.addClass('btn-success');
+        addVoteBtn.attr('id', 'del-vote-btn-1');
+        addVoteBtn.attr('data-method', 'delete');
+        addVoteBtn.prepend('<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> ');
+        currentUserProposalVoteId = <%= @proposal.vote_of(current_user).id %>;
+        addVoteBtn.attr('href', '/cities/' + cityId + '/proposals/' + proposalId + '/votes/' + currentUserProposalVoteId);
+        votesCountTag = $('div#lbls-votes-conut-' + proposalId + '> h6');
+        proposalVotesCount = <%= @proposal.votes_count %>;
+        if (proposalVotesCount > 1) {
+          votesCountTag.html(proposalVotesCount + ' VOTES');
+        } else {
+          votesCountTag.html(proposalVotesCount + ' VOTE');
+        }
+      <% else %>
+        window.location = '<%= city_path @city %>'
+      <% end %>
     <% else %>
       window.location = '<%= city_path @city %>'
     <% end %>
   <% else %>
-    window.location = '<%= city_path @city %>'
+    addVoteBtn = $('a#add-vote-btn');
+    addVoteBtn.html('A voté !');
+    addVoteBtn.removeClass('btn-primary');
+    addVoteBtn.addClass('btn-success');
+    addVoteBtn.attr('id', 'del-vote-btn');
+    addVoteBtn.attr('data-method', 'delete');
+    addVoteBtn.prepend('<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> ');
+    currentUserProposalVoteId = <%= @proposal.vote_of(current_user).id %>;
+    addVoteBtn.attr('href', '/proposals/' + proposalId + '/votes/' + currentUserProposalVoteId);
+    votesCountTag = $('h6#votes-count');
+    proposalVotesCount = <%= @proposal.votes_count %>;
+    if (proposalVotesCount > 1) {
+      votesCountTag.html(proposalVotesCount + ' VOTES');
+    } else {
+      votesCountTag.html(proposalVotesCount + ' VOTE');
+    }
   <% end %>
-<% else %>
-  addVoteBtn = $('a#add-vote-btn');
-  addVoteBtn.html('A voté !');
-  addVoteBtn.removeClass('btn-primary');
-  addVoteBtn.addClass('btn-success');
-  addVoteBtn.attr('id', 'del-vote-btn');
-  addVoteBtn.attr('data-method', 'delete');
-  addVoteBtn.prepend('<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> ');
-  currentUserProposalVoteId = <%= @proposal.vote_of(current_user).id %>;
-  addVoteBtn.attr('href', '/proposals/' + proposalId + '/votes/' + currentUserProposalVoteId);
-  votesCountTag = $('h6#votes-count');
-  proposalVotesCount = <%= @proposal.votes_count %>;
-  if (proposalVotesCount > 1) {
-    votesCountTag.html(proposalVotesCount + ' VOTES');
-  } else {
-    votesCountTag.html(proposalVotesCount + ' VOTE');
+  currentUserVoteTokensAfterVote = <%= current_user_vote_tokens %>
+  
+  if (currentUserVoteTokensAfterVote == 0) {
+    message = 'Il ne vous reste aucun jeton de vote !'
+  } else if (currentUserVoteTokensAfterVote == 1)
+    message = 'Il vous reste un dernier jeton de vote !'
+  else {
+    message = `Il vous reste encore ${currentUserVoteTokensAfterVote} jetons de vote !` 
   }
+  swal({ title:"Vote pris en compte !", text: "Merci pour votre collaboration ! En votant pour des propositions vous contribuez à l'amélioration de votre ville et par conséquent à l'amélioration de notre pays. " + message, type: "success", buttonsStyling: false, confirmButtonClass: "btn btn-success"})
+<% else %>
+  swal({ title:"Plus aucun jeton de vote !", text: "Désolé ! Vous n'avez aucun jeton de vote pour le moment, attendez le prochain renouvellement le <%= current_user_next_renewal_of_vote_tokens_date.strftime('%d/%m/%Y à %H:%M') %> ou dévotez pour des propositions qui vous semblent moins pertinentes !", type: "error", buttonsStyling: false, confirmButtonClass: "btn btn-danger"})
 <% end %>
