--- a/app/views/votes/destroy.js.erb
+++ b/app/views/votes/destroy.js.erb
@@ -21,6 +21,9 @@ proposalId = <%= @proposal.id %>;
   } else {
     votesCountTag.html(proposalVotesCount + ' VOTE');
   }
+  proposalClassification = $('div#classification');
+  proposalClassification.empty();
+  proposalClassification.append('<%= j render 'proposals/classifications', proposal: @proposal %>');
 <% end %>
 currentUserVoteTokensAfterVote = <%= current_user_vote_tokens %>
 
