--- a/app/views/votes/destroy.js.erb
+++ b/app/views/votes/destroy.js.erb
@@ -34,4 +34,4 @@ if (currentUserVoteTokensAfterVote == 0) {
 else {
   message = `Il vous reste encore ${currentUserVoteTokensAfterVote} jetons de vote !` 
 }
-swal({ title:"Vote retiré !", text: "Vous venez de dévoter pour la proposition ! Pas grave ! Nous espérons que vous trouviez d'autres propositions plus pertinetes aux quelles vous contribuerez ! " + message, type: "warning", buttonsStyling: false, confirmButtonClass: "btn btn-warning"});
+swal({ title:"Vote retiré !", text: "Vous récupérez un jeton ! Utilisez-le à bon escient en votant pour des idées pertinentes et inspirantes. " + message, type: "warning", buttonsStyling: false, confirmButtonClass: "btn btn-warning"});
