--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -44,7 +44,7 @@
   else {
     message = `Il vous reste encore ${currentUserVoteTokensAfterVote} jetons de vote !` 
   }
-  swal({ title:"Vote pris en compte !", text: "Merci pour votre collaboration ! En votant pour des propositions vous contribuez à l'amélioration de votre ville et par conséquent à l'amélioration de notre pays. " + message, type: "success", buttonsStyling: false, confirmButtonClass: "btn btn-success"})
+  swal({ title:"Vote pris en compte !", text: "Merci pour votre collaboration ! En votant pour des propositions vous contribuez à l'amélioration de votre ville et de la vie de vos concitoyens. " + message, type: "success", buttonsStyling: false, confirmButtonClass: "btn btn-success"})
 <% else %>
   swal({ title:"Plus aucun jeton de vote !", text: "Désolé ! Vous n'avez aucun jeton de vote pour le moment, attendez le prochain renouvellement le <%= current_user_next_renewal_of_vote_tokens_date.strftime('%d/%m/%Y à %H:%M') %> ou dévotez pour des propositions qui vous semblent moins pertinentes !", type: "error", buttonsStyling: false, confirmButtonClass: "btn btn-danger"})
 <% end %>
