add proposal_comment + delete proposal_comment + add proposal_comment_comment delete proposal_comment_commment with AJAX

--- a/app/views/additional_views/faq.html.erb
+++ b/app/views/additional_views/faq.html.erb
@@ -60,7 +60,7 @@
                       En revanche, tout le monde ne peut pas faire de proposition à sa ville.
                       <br /><br /> 
                       Il faut être majeur pour pouvoir proposer un projet à sa mairie. 
-                      Cependant, les moins de 18 ans peuvent quand même créer leur proposition afin donner de la visibilité à leur projet.
+                      Cependant, les moins de 18 ans peuvent quand même créer leur proposition afin de donner de la visibilité à leur projet.
                     </h5>
                   </div>
                 </div>
