--- a/app/views/proposals/_proposal_comments.html.erb
+++ b/app/views/proposals/_proposal_comments.html.erb
@@ -1,7 +1,7 @@
-<div id='proposal-comments' class="row">
+<div class="row">
   <div class="col">
     <table class="table table-responsive text-wrap">
-      <tbody>
+      <tbody id='proposal-comments'>
         <% comments.each do |x| %>
           <%= render 'proposals/proposal_comment', x: x, proposal: proposal %>
         <%end%>
