--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,5 +1,5 @@
 $(document).ready(function() {
   LikedCommentId = <%= @comment.id %>
-  LikedComment = $('#'+LikedCommentId);
+  LikedComment = $('tr#'+LikedCommentId);
   LikedComment.replaceWith('<%= j render 'proposals/proposal_comment', x: @comment, proposal: @proposal %>');
 });
